infra/overlays/dev/minio/41-minio-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: minio-ui.docker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service-lb
                port:
                  number: 8091
